--- a/example.env
+++ b/example.env
@@ -1,6 +1,13 @@
-DB_HOST=
+# Running with Docker
+DB_HOST=fullstack-postgres
+# when running the app without docker
+# DB_HOST=127.0.0.1
 DB_DRIVER=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_PORT=
+
+# Used by pgadmin service // For Docker
+PGADMIN_DEFAULT_EMAIL=
+PGADMIN_DEFAULT_PASSWORD=
